# rules_xcodeproj

examples/rules_ios/: MODULE.bazel  Package.swift
examples/rules_ios/iOSApp/Source/CoreUtilsMixed/MixedAnswer/: BUILD  MixedAnswer.swift
xcodeproj/internal/processed_targets/: mergeable_infos.bzl
