bazel_dep(
    name = "rules_xcodeproj",
    # Set to the real version with `--override_module`
    version = "0.0.0",
)
bazel_dep(
    name = "apple_support",
    version = "1.11.1",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "rules_apple",
    version = "3.2.1",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_swift",
    version = "1.16.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_ios",
    version = "4.6.0",
    repo_name = "build_bazel_rules_ios",
)
bazel_dep(
    name = "rules_swift_package_manager",
    version = "0.34.1",
)
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swiftpkg_swift_log",
)

apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(
    apple_cc_configure,
    "local_config_apple_cc",
    "local_config_apple_cc_toolchains",
)

# TODO: Remove manual register once https://github.com/bazelbuild/rules_cc/commit/c8c38f8c710cbbf834283e4777916b68261b359c is released
register_toolchains("@local_config_apple_cc_toolchains//:all")
